--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.Kim_JProject3"
         tools:targetApi="31">
         <activity
+            android:name=".DashboardActivity"
+            android:exported="false"
+            android:label="@string/title_activity_dashboard"
+            android:theme="@style/Theme.Kim_JProject3.NoActionBar" />
+        <activity
             android:name=".SignupActivity"
             android:exported="false" />
         <activity
