--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Kim_JProject3"
         tools:targetApi="31">
         <activity
-            android:name=".DashboardActivity"
+            android:name=".MainPageActivity"
             android:exported="false"
             android:label="@string/title_activity_dashboard"
             android:theme="@style/Theme.Kim_JProject3.NoActionBar" />
